_build/html/reports/ddd.err.log
Traceback (most recent call last):
  File "/Users/d/miniconda3/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/d/miniconda3/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# Extrapoints for someone to render this in Python, plotly, and interactive graphics!

#delimit ;
twoway 
    scatter  
	     final degree , 
	         col(blue) 
			 mcolor(%20) 
			 jitter(3) || 
	rcap 
	     y1lb y1ub degree, 
		     col(blue) ||   
	dot  
	     y1m degree, 
		 col(blue) 
		 msize(2)  
			legend(off ) 
			xlab(1 "MHS" 
			     2 "MSPH" 
				 3 "MPH" 
				 4 "PhD" 
				 5 "SCM") 
		yline(90, lcol(red) lp(dash)) 
		xti(" ") ;
#delimit cr




------------------

[0;36m  File [0;32m<tokenize>:10[0;36m[0m
[0;31m    rcap[0m
[0m    ^[0m
[0;31mIndentationError[0m[0;31m:[0m unindent does not match any outer indentation level

IndentationError: unindent does not match any outer indentation level (<tokenize>, line 10)

